--- a/resources/views/welcome.twig
+++ b/resources/views/welcome.twig
@@ -1,4 +1,4 @@
 {% extends "base.twig" %}
 {% block content %}
-    <h1>Welcone {{ dump(app) }}</h1>
+    <h1>Welcone {{ dump(test) }}</h1>
 {% endblock %}
