--- a/resources/views/base.twig
+++ b/resources/views/base.twig
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-    {% block head %}
-        <link rel="stylesheet" href="{{ asset('asset/css/style.css') }}" />
-        <title>{% block title %}{% endblock %} - My Webpage</title>
-    {% endblock %}
+
 </head>
 <body>
-<div id="content">{% block content %}{% endblock %}</div>
+</body>
+</html>
+
+
+<!DOCTYPE html>
+<html>
+<head>
+    {% block head %}
+        <link rel="stylesheet" href="{{ asset('asset/css/style.css') }}"/>
+        <title>{% block title %}{% endblock %} - My Webpage</title>
+    {% endblock %}
+    <!--Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="{{ asset('asset/css/materialize.min.css') }}"
+          media="screen,projection"/>
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
+
+<body>
+<div class="navbar-fixed">
+    <nav>
+        <div class="nav-wrapper">
+            <a href="#!" class="brand-logo">Blog</a>
+            {% if () %}
+            <ul class="right hide-on-med-and-down">
+                <li><a href="/login">Sign in</a></li>
+                <li><a href="/registration">Registration</a></li>
+            </ul>
+        </div>
+    </nav>
+</div>
+<div id="container">
+    <div class="row">
+        {% block content %}{% endblock %}
+    </div>
+</div>
+
+<!--Import jQuery before materialize.js-->
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="{{ asset('asset/js/materialize.min.js') }}"></script>
 </body>
 </html>
