--- a/resources/views/base.twig
+++ b/resources/views/base.twig
@@ -30,13 +30,14 @@
 <div class="navbar-fixed">
     <nav>
         <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">Blog</a>
+            <a href="/" class="brand-logo">Blog</a>
             <ul class="right hide-on-med-and-down">
                 {% if (global.session.get('user') == null) %}
                     <li><a href="/login">Sign in</a></li>
                     <li><a href="/registration">Registration</a></li>
                 {% else %}
-                    <li><a href="/user/{{ global.session.get('user').id }}">Profile</a> </li>
+                    <li><a href="/posts/users/{{ global.session.get('user').id }}">Profile</a> </li>
+                    <li><a href="/logout">logout</a> </li>
                 {% endif %}
             </ul>
         </div>
@@ -51,5 +52,6 @@
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="{{ asset('asset/js/materialize.min.js') }}"></script>
+<script type="text/javascript" src="{{ asset('asset/js/main.js') }}"></script>
 </body>
 </html>
