--- a/resources/views/post.twig
+++ b/resources/views/post.twig
@@ -3,8 +3,13 @@
     {% import _self as macros %}
 
     <li class="collection-item">
-        <h4>{{ comment.id }}</h4>
+        <h5><a href="/posts/users/{{ comment.getUser().getId() }}">{{ comment.getUser().getEmail() }}</a></h5>
 
+        <div>{{ comment.body }} <br>
+            {% if global.session.get('user') is defined %}
+                <a href="#textarea1" id="parent-comment-js" data-id="{{ comment.id }}"><span class="material-icons">chat_bubble_outline</span></a>
+            {% endif %}
+        </div>
         {% if comment.comments|length %}
             <ul class="collection with-header">
                 {% for child in comment.comments %}
@@ -30,7 +35,9 @@
                         <img src="/upload/{{ asset(post.image) }}">
                     {% endif %}
                     <div class="content">
-                        {{ post.body }}
+                        {% autoescape %}
+                            {{ post.body | raw }}
+                        {% endautoescape %}
                     </div>
                 </div>
                 <div class="card-action">
@@ -40,12 +47,12 @@
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col s12">
 
             <div class="card">
                 {% if comments %}
+                    <div class="card-title"><h4>Comments</h4></div>
                     <ul class="collection with-header">
                         {% for comment in comments %}
                             {{ macros.recursiveCategory(comment) }}
@@ -55,27 +62,29 @@
             </div>
         </div>
     </div>
-
-    <div class="row">
-        <form action="/posts/{{ post.id }}/comments" method="post" class="col m12 s12">
-            <div class="card">
-                <div class="card-content">
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <textarea name="body" id="textarea1" class="materialize-textarea"></textarea>
-                            <label for="textarea1">Textarea</label>
-                        </div>
-                    </div>
-
-                    <div class="row">
+    {% if global.session.get('user') is defined %}
+        <div class="row">
+            <form action="/posts/{{ post.id }}/comments" method="post" class="col m12 s12">
+                <div class="card">
+                    <div class="card-content">
                         <div class="row">
                             <div class="input-field col s12">
-                                <input type="submit" class="waves-effect waves-light btn">
+                                <textarea name="body" id="textarea1" class="materialize-textarea"></textarea>
+                                <label for="textarea1">Textarea</label>
+                            </div>
+                        </div>
+                        <input hidden value name="parent_id" id="parent">
+
+                        <div class="row">
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input type="submit" class="waves-effect waves-light btn">
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </form>
-    </div>
+            </form>
+        </div>
+    {% endif %}
 {% endblock %}
