useless commit message

--- a/resources/views/login.twig
+++ b/resources/views/login.twig
@@ -1,5 +1,10 @@
 {% extends 'base.twig' %}
 {% block content %}
+    {#<form action="/login" method="post" class="col offset-m3 m6 s12">#}
+        {#{{ form_widget(form) }}#}
+
+        {#<input type="submit" name="submit" />#}
+    {#</form>#}
     <div class="row">
         <form action="/login" method="post" class="col offset-m3 m6 s12">
             <div class="card">
