--- a/resources/views/base.twig
+++ b/resources/views/base.twig
@@ -1,29 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-</head>
-<body>
-</body>
-</html>
-
-
-<!DOCTYPE html>
-<html>
-<head>
     {% block head %}
-        <link rel="stylesheet" href="{{ asset('asset/css/style.css') }}"/>
+        <link rel="stylesheet" href="/asset/css/style.css"/>
         <title>{% block title %}{% endblock %} - My Webpage</title>
     {% endblock %}
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="{{ asset('asset/css/materialize.min.css') }}"
+    <link type="text/css" rel="stylesheet" href="/asset/css/materialize.min.css"
           media="screen,projection"/>
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <script src="{{ asset('asset/ckeditor/ckeditor.js') }}"></script>
+    <script src="/asset/ckeditor/ckeditor.js"></script>
 </head>
 
 <body>
@@ -32,11 +22,11 @@
         <div class="nav-wrapper">
             <a href="/" class="brand-logo">Blog</a>
             <ul class="right hide-on-med-and-down">
-                {% if (global.session.get('user') == null) %}
+                {% if (current_user == null) %}
                     <li><a href="/login">Sign in</a></li>
                     <li><a href="/registration">Registration</a></li>
                 {% else %}
-                    <li><a href="/posts/users/{{ global.session.get('user').id }}">Profile</a> </li>
+                    <li><a href="/posts/users/{{ current_user.id }}">Profile</a> </li>
                     <li><a href="/logout">logout</a> </li>
                 {% endif %}
             </ul>
@@ -51,7 +41,7 @@
 
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script type="text/javascript" src="{{ asset('asset/js/materialize.min.js') }}"></script>
-<script type="text/javascript" src="{{ asset('asset/js/main.js') }}"></script>
+<script type="text/javascript" src="/asset/js/materialize.min.js"></script>
+<script type="text/javascript" src="/asset/js/main.js"></script>
 </body>
 </html>
