--- a/resources/views/post.twig
+++ b/resources/views/post.twig
@@ -32,7 +32,7 @@
                     {% if post.image == null %}
                         <img src="/upload/index.png">
                     {% else %}
-                        <img src="/upload/{{ asset(post.image) }}">
+                        <img src="/upload/{{ post.image }}">
                     {% endif %}
                     <div class="content">
                         {% autoescape %}
